Squashed commit of the following:
commit 63d3067d027deb1348ef6bf9cb22efd8f93072fd
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Thu Jun 25 20:17:22 2026 +0100

    Move all migrations into main schema file

commit 8ae72905e74624d2ec25e8b81c0c3360ed59a202
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Tue Jun 23 00:55:48 2026 +0100

    Updated architecture OpenCode skill to specify ESM and ES6+ arrow function usage

commit f8278e725bf9b167cdce0d648a02ac5dc438f3c7
Author: Stijn Klomp <stijnklomp1@hotmail.com>
Date:   Sun Jun 21 14:59:10 2026 +0100

    Squashed commit of the following:

    commit 023d489264cc41a17fdc924454cea0a9de88ef6f
    Author: Stijn Klomp <stijnklomp1@hotmail.com>
    Date:   Sun Jun 21 02:36:07 2026 +0100

        Multi-source-and-target selection for file transfer

    commit 239321e482f2a9164b0c6c385147fc9718a135a9
    Author: Stijn Klomp <stijnklomp1@hotmail.com>
    Date:   Sun Jun 21 00:44:34 2026 +0100

        Differentiation of 'high-level' and 'request-level' logs

    commit 20767769b05411de6f9523691cc87cf88ea7d9e0
    Author: Stijn Klomp <stijnklomp1@hotmail.com>
    Date:   Sat Jun 20 22:34:20 2026 +0100

        Share files feature

    commit ddaa2c67a193146802d88a49836a0e7822699800
    Author: Stijn Klomp <stijnklomp1@hotmail.com>
    Date:   Sat Jun 20 15:56:05 2026 +0100

        Show more useful error messages for end users

    commit 17b09139aceac82f210491a4e785491b845e5211
    Author: Stijn Klomp <stijnklomp1@hotmail.com>
    Date:   Sat Jun 20 15:50:31 2026 +0100

        Projects page

    commit dc7cd26dd327342dbe097641839279a1bdf27dbf
    Author: Stijn Klomp <stijnklomp1@hotmail.com>
    Date:   Fri Jun 19 23:23:14 2026 +0100

        Fix for 'Send fragments' section on '/devices' page

    commit 9d42f4c50c4c18508e691f52a76326ee033b0cba
    Author: Stijn Klomp <stijnklomp1@hotmail.com>
    Date:   Fri Jun 19 20:11:01 2026 +0100

        Generate device data upon device register

    commit c7a9a4ae07d7c
